-- Version 2.2.1, release ...

 * Bug fix: fix an error which occurred when trying to import a height map into an old world

-- Version 2.2.0, released 18-3-2016

 * Added support for the new 1.9 block types
   + New terrain type: Grass Path
   + New plant types for Custom Plant layers: Chorus Flower, Beetroots and Nether Wart
 * Height maps can now be imported into existing worlds, and into other dimensions than the surface
   + Select Edit -> Import -> Height map into current dimension... to do so
   + You can adjust the scale and offset to import the height map into the desired location in your existing world
   + The "create new tiles" option, selected by default, causes WorldPainter to create new tiles automatically for the new land, if necessary
 * Image masks can now be imported to set the terrain type, or any layer of your choosing
   + Select Edit -> Import -> Mask as terrain or layer... to do so
   + Select an image, then select the target to apply it to (the terrain or a layer), then select the mapping (the method with which the image values should be translated to terrain or layer values)
   + WorldPainter will automatically let you select only targets and mappings which make sense for the image type and the selected target
   + For most layers, and for setting the terrain, you need a (real) grey scale (8 or 16 bit) or black and white (1 bit) image. A colour/RGB image which happens to contain only shades of grey is NOT a grey scale image and won't work!
   + The available mappings are:
     - One to one - this sets the layer value to the exact value from the image and can be used for the terrain, for discrete layers such as Biomes, and for continuous layers, allowing you to create masks which will directly set terrain or layer values
       o Targets for which the image contains values which are too high will not be selectable