@@ -1,5 +1,6 @@
 -- Version 2.2.1, release ...
 
+ * Bug fix: make previews of combined layers work
  * Bug fix: fix an error which occurred when trying to import a height map into an old world
 
 -- Version 2.2.0, released 18-3-2016
